Github Workflow: Add a check for pull request commits to be signed off
Changed event syntax to more clearly trigger on every PR event.
Changed token name from the generic SECRET_TOKEN to a specific
PR_SIGNOFF_TOKEN for easier maintenence.

Signed-off-by: JSOwens <josephs.owens@gmail.com>

--- a/.github/workflows/pr-signoff-check.yml
+++ b/.github/workflows/pr-signoff-check.yml
@@ -1,7 +1,6 @@
 name: Check PR Sign-off
 
-on:
-  pull_request_target:
+on: [pull_request]
 
 jobs:
   check-sign-off:
@@ -13,4 +12,4 @@ jobs:
     steps:
       - uses: live627/check-pr-signoff-action@v1
         with:
-          token: ${{ secrets.SECRET_TOKEN }}
+          token: ${{ secrets.PR_SIGNOFF_TOKEN }}
