Github Workflow: Add a check for pull requests commits to be signed off
Changed the PAT to the default.

Signed-off-by: JSOwens <josephs.owens@gmail.com>

--- a/.github/workflows/pr-signoff-check.yml
+++ b/.github/workflows/pr-signoff-check.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: live627/check-pr-signoff-action@v1
         with:
-          token: ${{ secrets.PR_SIGNOFF_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
